<resources>
    <string name="app_name">РазБудильник</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">ВС</string>
    <string name="addAlarmMakeRepetitiveSwitch">Сделать постоянным:</string>
    <string name="addAlarmAlarmNameText">Название будильника:</string>
    <string name="addAlarmChooseMelodyButton">Мелодия будильника</string>
    <string name="addAlarmChosenMelodyText">Выбранная мелодия: по умолчанию</string>
    <string name="addAlarmSetBuzzSwitch">Вибрация:</string>
    <string name="addAlarmGraduallyIncreaseVolumeSwitch">Повышать громкость:</string>
    <string name="addAlarmInformationButton">Отображение общей информации</string>
    <string name="addAlarmGamesButton">Список игр</string>
    <string name="addAlarmSaveButton">Сохранить</string>
    <string name="alarms">Будильники</string>
    <string name="records">Рекорды</string>
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="noAlarmsToAdd">Будильников нет!\nЧтобы добавить новый будильник, нажмите +</string>
    <string name="dayOfWeek">День недели:</string>
    <string name="cancelAlarm">Выключить будильник</string>
    <string name="settings_name">Настройки</string>
</resources>